# dns-degistirici

./: .gitignore  README.md  build_error.txt  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  ActiveDnsStatus.tsx  CustomDnsInput.tsx  DnsProfileCard.tsx  TitleBar.tsx  Toast.tsx
src/layouts/: Layout.tsx
