[package]
name = "dns_degistirici"
version = "1.0.0"
description = "DNS Degistirici v1.0"
authors = ["sc0x01"]
edition = "2021"

[lib]
name = "dns_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
